Adjusted workflow to use Data_to_pkl, PTRIG_to_pkl, and Beamtest_Analysis

--- a/PklToVirtue.ipynb
+++ b/PklToVirtue.ipynb
@@ -14,25 +14,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('Run1_list.pickle', 'rb') as handle:\n",
+    "with open('Run11_list.pickle', 'rb') as handle:\n",
     "    data = pickle.load(handle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Define the range for Tstamp_us\n",
-    "lower_bound = 50 * (60 * 60 * 1e6)\n",
-    "upper_bound = 53 * (60 * 60 * 1e6)\n",
+    "lower_bound = 1650 * ( 60 * 1e6)\n",
+    "upper_bound = 1700 * ( 60 * 1e6)\n",
     "\n",
     "# Filter the DataFrame\n",
     "data = data[(data['Tstamp_us'] >= lower_bound) & (data['Tstamp_us'] <= upper_bound)]\n",
@@ -43,27 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Brd  Ch  LG  HG     Tstamp_us  event_ids   xpos   ypos      zpos\n",
-      "0          0   0  44  39  1.800017e+11      81210  50.01  18.37   24.0526\n",
-      "1          0   1  36  79  1.800017e+11      81210  77.64  34.32   24.0526\n",
-      "2          0   2  31  57  1.800017e+11      81210  22.37  34.32   24.0526\n",
-      "3          0   3  32  46  1.800017e+11      81210  50.01  50.28   24.0526\n",
-      "4          0   4  42  60  1.800017e+11      81210  77.64  66.23   24.0526\n",
-      "...      ...  ..  ..  ..           ...        ...    ...    ...       ...\n",
-      "1089787    2  59  23  98  1.907955e+11     101892  26.10 -26.36  241.2734\n",
-      "1089788    2  60   0  89  1.907955e+11     101892 -73.90  74.16  268.4260\n",
-      "1089789    2  61  24  73  1.907955e+11     101892 -26.10  74.16  268.4260\n",
-      "1089790    2  62  29   0  1.907955e+11     101892 -73.90  26.36  268.4260\n",
-      "1089791    2  63   0  64  1.907955e+11     101892 -26.10  26.36  268.4260\n",
+      "         Brd  Ch  LG   HG     Tstamp_us  event_ids   xpos   ypos      zpos\n",
+      "0          0   0  67  160  9.900006e+10     112751  50.01  18.37   24.0526\n",
+      "1          0   1  47  196  9.900006e+10     112751  77.64  34.32   24.0526\n",
+      "2          0   2  50  177  9.900006e+10     112751  22.37  34.32   24.0526\n",
+      "3          0   3  33  166  9.900006e+10     112751  50.01  50.28   24.0526\n",
+      "4          0   4  40  175  9.900006e+10     112751  77.64  66.23   24.0526\n",
+      "...      ...  ..  ..  ...           ...        ...    ...    ...       ...\n",
+      "2290555    2  59  17  100  1.019964e+11     153880  26.10 -26.36  241.2734\n",
+      "2290556    2  60   0   61  1.019964e+11     153880 -73.90  74.16  268.4260\n",
+      "2290557    2  61  32   61  1.019964e+11     153880 -26.10  74.16  268.4260\n",
+      "2290558    2  62  24    0  1.019964e+11     153880 -73.90  26.36  268.4260\n",
+      "2290559    2  63   0   24  1.019964e+11     153880 -26.10  26.36  268.4260\n",
       "\n",
-      "[1089792 rows x 9 columns]\n"
+      "[2290560 rows x 9 columns]\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,31 +98,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/spreins/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:39: RuntimeWarning: divide by zero encountered in long_scalars\n",
+      "/Users/spreins/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:39: RuntimeWarning: invalid value encountered in long_scalars\n"
+     ]
+    }
+   ],
    "source": [
     "use_log_scale = False  # Set to True for logarithmic scale, False for linear scale\n",
     "time_window = 1 # All hits below this time value will be given artificial hit times\n",
     "\n",
     "data = []\n",
     "\n",
-    "numEvts = 20\n",
+    "numEvts = 50\n",
     "if len(events) < 20:\n",
     "    numEvts = len(x)\n",
+    "    \n",
+    "\n",
     "\n",
     "for i in events[0:numEvts]:\n",
+    "    event_mask_1 = False\n",
+    "    event_mask_2 = False\n",
+    "    \n",
     "    event = {\n",
-    "        \"infoText\": \"CALI BNL Prototype Cosmic Event #\" + str(i),\n",
+    "        \"infoText\": \"CALI BNL Prototype Event #\" + str(i),\n",
     "        \"colorScale\": {}\n",
     "    }\n",
     "    \n",
     "    mask = (event_ids == i)\n",
     "\n",
     "    # Filter out energies less than or equal to 0\n",
-    "    valid_energies = [energy for energy in LG[mask] if energy > 0]\n",
+    "    valid_energies = [energy for energy in LG[mask] if energy > 300]\n",
     "\n",
     "    if valid_energies:\n",
+    "        event_mask_1 = True\n",
     "        min_energy = min(valid_energies)\n",
     "        max_energy = max(valid_energies)\n",
     "\n",
@@ -142,12 +157,11 @@
     "    objects = []\n",
     "\n",
     "    for j in range(len(LG[mask])):\n",
-    "\n",
     "        dist = np.sqrt((xpos[mask][j] / 200) ** 2 + (ypos[mask][j] / 200) ** 2 + (zpos[mask][j] / 200) ** 2)\n",
     "        c = 0.299792\n",
     "        time = dist / c\n",
-    "        if normalized_energy[j] > 0.5:\n",
-    "\n",
+    "        if normalized_energy[j] > 0:\n",
+    "            event_mask_2 = True\n",
     "            obj = {\n",
     "                \"type\": \"hit\",\n",
     "                \"time\": float(time),\n",
@@ -158,9 +172,9 @@
     "            }\n",
     "\n",
     "            objects.append(obj)\n",
-    "\n",
-    "    event[\"objects\"] = objects\n",
-    "    data.append(event)\n",
+    "    if event_mask_1 & event_mask_2:\n",
+    "        event[\"objects\"] = objects\n",
+    "        data.append(event)\n",
     "\n",
     "eventPath = 'Events.json'\n",
     "# Write data to JSON file\n",
