Added Data_to_pkl.py script

--- a/Data_to_pkl.ipynb
+++ b/Data_to_pkl.ipynb
@@ -157,7 +157,7 @@
     "    filtered_events = events[(events['Brd'] == board_number) & (events['Ch'] == channel_number)]\n",
     "    \n",
     "    # Retrieve LG values from filtered events\n",
-    "    LG_values = filtered_events['LG'].tolist()\n",
+    "    LG_values = filtered_events['HG'].tolist()\n",
     "\n",
     "    \n",
     "    return LG_values\n",
