Added position mapping, multiplicity plots

--- a/PklToVirtue.ipynb
+++ b/PklToVirtue.ipynb
@@ -79,9 +79,9 @@
    "source": [
     "LG = np.array(data[\"LG\"])\n",
     "event_ids = np.array(data[\"event_ids\"])\n",
-    "xpos = np.array(data[\"xpos\"])\n",
-    "ypos = np.array(data[\"ypos\"])\n",
-    "zpos = np.array(data[\"zpos\"])\n",
+    "xpos = np.array(data[\"x_pos\"])\n",
+    "ypos = np.array(data[\"y_pos\"])\n",
+    "zpos = np.array(data[\"z_pos\"])\n",
     "\n",
     "#LG = LG - 50.39\n",
     "\n",
