--- a/PklToVirtue.ipynb
+++ b/PklToVirtue.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('Run11_list.pickle', 'rb') as handle:\n",
+    "with open('Run200_list.pkl', 'rb') as handle:\n",
     "    data = pickle.load(handle)"
    ]
   },
@@ -31,14 +31,14 @@
    "outputs": [],
    "source": [
     "# Define the range for Tstamp_us\n",
-    "lower_bound = 1650 * ( 60 * 1e6)\n",
-    "upper_bound = 1700 * ( 60 * 1e6)\n",
+    "#lower_bound = 1650 * ( 60 * 1e6)\n",
+    "#upper_bound = 1700 * ( 60 * 1e6)\n",
     "\n",
     "# Filter the DataFrame\n",
-    "data = data[(data['Tstamp_us'] >= lower_bound) & (data['Tstamp_us'] <= upper_bound)]\n",
+    "#data = data[(data['Tstamp_us'] >= lower_bound) & (data['Tstamp_us'] <= upper_bound)]\n",
     "\n",
     "# Reset index if needed\n",
-    "data.reset_index(drop=True, inplace=True)"
+    "#data.reset_index(drop=True, inplace=True)"
    ]
   },
   {
@@ -50,20 +50,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Brd  Ch  LG   HG     Tstamp_us  event_ids   xpos   ypos      zpos\n",
-      "0          0   0  67  160  9.900006e+10     112751  50.01  18.37   24.0526\n",
-      "1          0   1  47  196  9.900006e+10     112751  77.64  34.32   24.0526\n",
-      "2          0   2  50  177  9.900006e+10     112751  22.37  34.32   24.0526\n",
-      "3          0   3  33  166  9.900006e+10     112751  50.01  50.28   24.0526\n",
-      "4          0   4  40  175  9.900006e+10     112751  77.64  66.23   24.0526\n",
-      "...      ...  ..  ..  ...           ...        ...    ...    ...       ...\n",
-      "2290555    2  59  17  100  1.019964e+11     153880  26.10 -26.36  241.2734\n",
-      "2290556    2  60   0   61  1.019964e+11     153880 -73.90  74.16  268.4260\n",
-      "2290557    2  61  32   61  1.019964e+11     153880 -26.10  74.16  268.4260\n",
-      "2290558    2  62  24    0  1.019964e+11     153880 -73.90  26.36  268.4260\n",
-      "2290559    2  63   0   24  1.019964e+11     153880 -26.10  26.36  268.4260\n",
+      "         Brd  Ch   LG   HG     Tstamp_us  event_ids  x_pos  y_pos     z_pos\n",
+      "0          2   0  168  210  1.715398e+15          0 -73.90  74.17  159.8156\n",
+      "1          2   1  159  199  1.715398e+15          0 -26.10  74.17  159.8156\n",
+      "2          2   2  156  222  1.715398e+15          0 -73.90  26.37  159.8156\n",
+      "3          2   3  167  224  1.715398e+15          0 -26.10  26.37  159.8156\n",
+      "4          2   4  154  225  1.715398e+15          0  73.90  74.16  159.8156\n",
+      "...      ...  ..  ...  ...           ...        ...    ...    ...       ...\n",
+      "2103355    0  59  152  197  1.715405e+15      10954 -50.01  50.27   78.3578\n",
+      "2103356    0  60  157  193  1.715405e+15      10954 -77.64  66.22   78.3578\n",
+      "2103357    0  61  159  167  1.715405e+15      10954 -22.37  66.22   78.3578\n",
+      "2103358    0  62  148  146  1.715405e+15      10954 -50.01  82.18   78.3578\n",
+      "2103359    0  63  153  356  1.715405e+15      10954  50.01  82.17   78.3578\n",
       "\n",
-      "[2290560 rows x 9 columns]\n"
+      "[2103360 rows x 9 columns]\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "use_log_scale = False  # Set to True for logarithmic scale, False for linear scale\n",
+    "use_log_scale = True  # Set to True for logarithmic scale, False for linear scale\n",
     "time_window = 1 # All hits below this time value will be given artificial hit times\n",
     "\n",
     "data = []\n",
@@ -180,44 +180,6 @@
     "# Write data to JSON file\n",
     "with open(eventPath, 'w') as json_file:\n",
     "    json.dump(data, json_file, indent=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "template_parameters = {\n",
-    "    \"sides\": 4,\n",
-    "    \"rmin1\": 0,\n",
-    "    \"rmax1\": 1.386/2,\n",
-    "    \"rmin2\": 0,\n",
-    "    \"rmax2\": 1.386/2,\n",
-    "    \"lengthOut\": 0.271526/2,\n",
-    "    \"lengthIn\": 0.271526/2,\n",
-    "    \"offsetIn\": 0,\n",
-    "    \"angle\": 0,\n",
-    "    \"R\": 0.5882352941176471,\n",
-    "    \"G\": 0.5882352941176471,\n",
-    "    \"B\": 1.0\n",
-    "}\n",
-    "\n",
-    "# Extend the data for additional layers\n",
-    "for i in range(1, 18): \n",
-    "    new_entry = {\n",
-    "        \"name\": f\"Layer{i}\",\n",
-    "        \"parameters\": template_parameters.copy()  # Create a copy of the template parameters\n",
-    "    }\n",
-    "    new_entry[\"parameters\"][\"offset\"] = (0.1358/2) + (0.271526/2) * (i - 1)  # Update the offset\n",
-    "    data.append(new_entry)\n",
-    "\n",
-    "\n",
-    "# Write the updated data to a new JSON file\n",
-    "with open('Detector.json', 'w') as file:\n",
-    "    json.dump(data, file, indent=2)  # Save the updated data to a new JSON file"
    ]
   },
   {
